--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header bg-secondary">
         <!-- navbar -->
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
@@ -26,9 +26,10 @@
         <!-- banner -->
         <div class="banner">
             <div class="banner-content">
-                <h4 class="banner-greetings dark-2">Hi, I  am</h4>
+                <h4 class="banner-greetings dark-2">Hi, I am</h4>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly
+                    he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Hire Me</button>
             </div>
@@ -36,7 +37,123 @@
         </div>
     </header>
     <main>
-        
+        <!-- about section -->
+        <section class="about bg-secondary">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
+            <div class="about-items">
+                <!-- .about-item*4>p.item-title+p.item-description -->
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email</p>
+                    <p class="item-description">info@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of birth:</p>
+                    <p class="item-description">11 November 1987</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From:</p>
+                    <p class="item-description">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
+        <!-- skills section -->
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for
+                clients all over the world. Below is a quick overview of my main technical skill sets and technologies i
+                use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <!-- .skill*4>img+h4.skill-title+p.skill-description -->
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanila Javascript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume section -->
+        <section class="resume">
+            <h3 class="section-title text-center">A summary of My Resume</h3>
+            <div class="resume-container">
+                <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+.h5.experience-sub-title+.experience-description -->
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <div class="h5 experience-sub-title">Harvard University / 2015 - 2017</div>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <div class="h5 experience-sub-title">Harvard University / 2015 - 2017</div>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <div class="h5 experience-sub-title">Harvard University / 2015 - 2017</div>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <div class="h5 experience-sub-title">Harvard University / 2015 - 2017</div>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <div class="h5 experience-sub-title">Harvard University / 2015 - 2017</div>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience-title">Master in Computer Engineering</h4>
+                        <div class="h5 experience-sub-title">Harvard University / 2015 - 2017</div>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center resume-download-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
