--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/aff96cd569.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -30,8 +31,8 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly
                     he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Hire Me</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Hire Me</button>
             </div>
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -151,7 +152,7 @@
                 </div>
             </div>
             <div class="text-center resume-download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
